# irap

./: .env.example  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  manifest.yml  pyproject.toml  requirements.txt
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  local.py  paas.py
core/templates/core/: base.html  home.html
user/migrations/: 0001_initial.py
